--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -1,20 +1,6 @@
 name: documentation
 
-on:
-  push:
-    branches: [ main ]
-    paths:
-      - "docs/**"
-      - "**.py"
-      - "pyproject.toml"
-      - "setup.cfg"
-      - "setup.py"
-  pull_request:
-    branches: [ main ]
-    paths:
-      - "docs/**"
-      - "**.py"
-  workflow_dispatch:
+on: [push, pull_request, workflow_dispatch]
 
 permissions:
   contents: write
@@ -23,40 +9,20 @@ jobs:
   docs:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
-
-      - name: Cache pip
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements*.txt', 'pyproject.toml', 'setup.cfg') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-
-      - name: Install project & docs deps
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+      - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
-          pip install -e .                      # so autodoc can import your package
-          pip install sphinx sphinx_rtd_theme myst-parser sphinx-copybutton sphinx-autodoc-typehints
-
-      - name: Build docs (HTML)
+          pip install sphinx sphinx_rtd_theme myst_parser
+          pip install sphinx-copybutton
+      - name: Sphinx build
         run: |
-          sphinx-build -M html docs docs/_build -W --keep-going
-          # Result goes to docs/_build/html
-
-      - name: Deploy to GitHub Pages (gh-pages branch)
-        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
+          sphinx-build doc _build
+      - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
+        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_branch: gh-pages
-          publish_dir: docs/_build/html
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: _build/
           force_orphan: true
