--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -15,6 +15,7 @@ jobs:
         run: |
           pip install sphinx sphinx_rtd_theme myst_parser
           pip install sphinx-copybutton
+          pip install sphinxcontrib-mermaid
       - name: Sphinx build
         run: |
           sphinx-build doc _build
