added sensitivity analysis

--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -1,10 +1,5 @@
 version: 2
 
-on: [push, pull_request, workflow_dispatch]
-
-permissions:
-  contents: write
-
 build:
   os: ubuntu-22.04
   tools:
@@ -12,25 +7,12 @@ build:
 
 sphinx:
   configuration: doc/conf.py
-jobs:
-  docs:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-      - name: Install dependencies
-        run: |
-          pip install sphinx sphinx_rtd_theme myst_parser
-          pip install sphinx-copybutton
-          pip install sphinxcontrib-mermaid
-      - name: Sphinx build
-        run: |
-          sphinx-build doc _build
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
-        with:
-          publish_branch: gh-pages
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: _build/
-          force_orphan: true
+
+python:
+  install:
+    - pip
+    - sphinx
+    - sphinx_rtd_theme
+    - myst_parser
+    - sphinx-copybutton
+    - sphinxcontrib-mermaid
